[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "api-debugger"
description = "🚀 A comprehensive Python library for debugging API calls with beautiful logging, cURL export, and seamless integrations for Django REST Framework and FastAPI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "API Debugger Team", email = "api-debugger@example.com"}
]
maintainers = [
    {name = "API Debugger Team", email = "api-debugger@example.com"}
]
keywords = [
    "api", "debugging", "http", "requests", "httpx", "django", "fastapi", 
    "logging", "curl", "rest", "json", "middleware", "rich", "pretty-print"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Debugging",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dynamic = ["version"]

# Core dependencies
dependencies = [
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
# HTTP clients
requests = ["requests>=2.25.0"]
httpx = ["httpx>=0.24.0"]

# Rich formatting for pretty output
rich = ["rich>=10.0.0"]

# Framework integrations
django = ["django>=3.2.0"]
fastapi = ["fastapi>=0.68.0", "starlette>=0.14.0"]

# All optional dependencies
full = [
    "requests>=2.25.0",
    "httpx>=0.24.0", 
    "rich>=10.0.0",
    "django>=3.2.0",
    "fastapi>=0.68.0",
    "starlette>=0.14.0",
]

# Development dependencies
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "requests>=2.25.0",
    "httpx>=0.24.0",
    "rich>=10.0.0",
    "django>=3.2.0",
    "fastapi>=0.68.0",
    "starlette>=0.14.0",
    "uvicorn>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/Amanlook/ai-agent-builder"
Documentation = "https://github.com/Amanlook/ai-agent-builder/blob/main/README.md"
Repository = "https://github.com/Amanlook/ai-agent-builder.git"
"Bug Tracker" = "https://github.com/Amanlook/ai-agent-builder/issues"
Changelog = "https://github.com/Amanlook/ai-agent-builder/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/Amanlook/ai-agent-builder"

[tool.setuptools]
packages = ["api_debugger"]

[tool.setuptools_scm]
write_to = "api_debugger/_version.py"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=api_debugger",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "httpx.*",
    "django.*",
    "fastapi.*",
    "starlette.*", 
    "rich.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["api_debugger"]
omit = [
    "*/tests/*",
    "*/test_*",
    "api_debugger/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError", 
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]